# SandBox

./: .gitignore  CMakeLists.txt  Makefile
docs/: index.html  style.css
docs/pages/: doc_button.html  doc_controllermoves.html  doc_game.html  doc_keyboard.html  doc_logmanager.html  doc_mapgenerator.html  doc_player.html  doc_sandbox.html  doc_sate.html  doc_template.html
game/: CMakeLists.txt  Makefile
game/errors/: src-Game-Player-Player.cpp
game/include/: Entity.hpp  GameClass.hpp  GameEntity.hpp  GameMapObject.hpp  GameSoundObject.hpp  GameSpriteObject.hpp  LogManager.hpp  SandBox.hpp  State.hpp
game/include/Components/: AScrollableView.hpp  Button.hpp  InputText.hpp  ListSwapper.hpp  Range.hpp  SettingsEditor.hpp
game/include/Game/: Game.hpp  MapGenerator.hpp  MapObject.hpp
game/include/Game/Player/: Player.hpp  Sound.hpp
game/include/Game/Player/Moves/: ControllerMoves.hpp  IMoves.hpp  KeyboardMoves.hpp
game/include/Scenes/: AScene.hpp  IScene.hpp  SGame.hpp  SMainMenu.hpp  SMenu.hpp  SSettingsMenu.hpp  Types.hpp
game/include/Scenes/SubScenes/: ASubScene.hpp  ISubScene.hpp  SSMainGame.hpp  SSPauseGame.hpp  SSWinGame.hpp
game/include/Scenes/SubScenes/Menu/: SSMainMenu.hpp
game/include/Sound/: Sound.hpp
game/maps/: collisions.txt  fullscreen.txt  large.txt  map.txt  medium.txt
game/maps/invalid/: no_air.txt  no_spawn.txt
game/src/: LogManager.cpp  SandBox.cpp  State.cpp  main.cpp
game/src/Components/: AScrollableView.cpp  Button.cpp  InputText.cpp  ListSwapper.cpp  Range.cpp  SettingsEditor.cpp
game/src/Game/: Game.cpp  MapGenerator.cpp  MapObject.cpp
game/src/Game/Player/: Player.cpp  Sound.cpp
game/src/Game/Player/Moves/: ControllerMoves.cpp  KeyboardMoves.cpp
game/src/Scenes/: AScene.cpp  SGame.cpp  SMainMenu.cpp  SMenu.cpp  SSettingsMenu.cpp
game/src/Scenes/SubScenes/: ASubScene.cpp  SSMainGame.cpp  SSPauseGame.cpp  SWinGame.cpp
game/src/Scenes/SubScenes/Menu/: SSMainMenu.cpp  SSSettingsMenu.cpp
game/src/Sound/: Sound.cpp
game_remaster/maps/: collisions.json  fullscreen.json  large.json  map.json  medium.json  small.json  tests.json  tests.txt
game_remaster/src/: main.cpp
in_progress/: function_ptr_register.cpp
include/: GameClass.hpp  SandBox.hpp  State.hpp
include/Component/: Button.hpp  Player.hpp
include/Components/: AScrollableView.hpp  Button.hpp  Player.hpp  Range.hpp  SettingsEditor.hpp
include/Game/: Game.hpp  MapGenerator.hpp
include/Scenes/: AScene.hpp  IScene.hpp  SGame.hpp  SMainGame.hpp  SMainMenu.hpp  SMenu.hpp  SSettingsMenu.hpp  Types.hpp
maps/: fullscreen.txt  large.txt  small.txt
maps/invalid/: inconsistent_size.txt  no_ground.txt  too_many_ends.txt  too_many_spawns.txt
src/: GameClass.cpp  SandBox.cpp  State.cpp
src/Component/: Button.cpp  Player.cpp
src/Components/: AScrollableView.cpp  Button.cpp  Player.cpp  Range.cpp  SettingsEditor.cpp
src/Game/: Game.cpp  MapGenerator.cpp
src/Scenes/: AScene.cpp  SGame.cpp  SMainGame.cpp  SMainMenu.cpp  SMenu.cpp  SSettingsMenu.cpp
test/: GameMapObject.cpp  GameMapObject.hpp  Jsonparse.cpp  SimpleJsonParserIII.cpp  SimpleJsonParserIII.cpp~  json_parser
test/parser/: JsonParser.cpp  JsonParserpm.cpp  SimpleJsonParserI.cpp  SimpleJsonParserII.cpp  SimpleJsonParserIII.cpp  (+2 more)
tools/: compressor.py
(+55 files in other folders)
